--- a/packages/card/src/scss/_component.scss
+++ b/packages/card/src/scss/_component.scss
@@ -145,76 +145,12 @@
 
       // When there are 3 items
       @include with-count(3) {
-        
-        .uq-card {
-
-          &--story,
-          &--event {
-
-            flex-direction: row;
-
-            .uq-card__image__wrapper {
-              min-width: 98px;
-              min-height: 100%;
-            }
-            .uq-card__image {
-              min-height: 100%;
-              padding-bottom: 0%;
-            }
-            .uq-card__content__wrapper {
-              min-width: 50%;
-            }
-            .uq-card__content {
-              padding: core.$space-none core.$space;
-            }
-            .uq-card__title {
-              margin: core.$space-none core.$space-none core.$space-sm;
-            }
-            .uq-card__body {
-              display: none;
-            }
-            .uq-card__actions {
-              padding: core.$space-none core.$space core.$space;
-            }
-          }
-        }
+        @include card-list-style();
       }
 
       // When there are 4 items
       @include with-count(4) {
-        
-        .uq-card {
-
-          &--story,
-          &--event {
-            
-            flex-direction: row;
-
-            .uq-card__image__wrapper {
-              min-width: 98px;
-              min-height: 100%;
-            }
-            .uq-card__image {
-              min-height: 100%;
-              padding-bottom: 0%;
-            }
-            .uq-card__content__wrapper {
-              min-width: 50%;
-            }
-            .uq-card__content {
-              padding: core.$space-none core.$space;
-            }
-            .uq-card__title {
-              margin: core.$space-none core.$space-none core.$space-sm;
-            }
-            .uq-card__body {
-              display: none;
-            }
-            .uq-card__actions {
-              padding: core.$space-none core.$space core.$space;
-            }
-          }
-        }
+        @include card-list-style();
       }
     }
   }
