--- a/packages/storybook-html/src/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/src/components/intro/kitchen-sink.html
@@ -303,28 +303,28 @@
     <button class="uq-button uq-button--purple">Button</button>
     <button class="uq-button uq-button--purple uq-button--outline">Button</button>
     <button class="uq-button uq-button--purple uq-button--text">Button</button>
+    <h6>Size</h6>
+    <button class="uq-button">Button</button>
+    <button class="uq-button uq-button--outline">Button</button>
+    <button class="uq-button uq-button--text">Button</button>
+    <br/><br/>
+    <button class="uq-button uq-button--tiny">Button</button>
+    <button class="uq-button uq-button--tiny uq-button--outline">Button</button>
+    <button class="uq-button uq-button--tiny uq-button--text">Button</button>
+    <br/><br/>
+    <button class="uq-button uq-button--small">Button</button>
+    <button class="uq-button uq-button--small uq-button--outline">Button</button>
+    <button class="uq-button uq-button--small uq-button--text">Button</button>
+    <br/><br/>
+    <button class="uq-button uq-button--large">Button</button>
+    <button class="uq-button uq-button--large uq-button--outline">Button</button>
+    <button class="uq-button uq-button--large uq-button--text">Button</button> 
     <h6>Expand</h6>
     <button class="uq-button uq-button--expand">Button</button>
     <br/><br/>
     <button class="uq-button uq-button--expand uq-button--outline">Button</button>
     <br/><br/>
     <button class="uq-button uq-button--expand uq-button--text">Button</button>
-    <br/><br/>
-    <button class="uq-button uq-button--secondary uq-button--expand">Button</button>
-    <br/><br/>
-    <button class="uq-button uq-button--secondary uq-button--expand uq-button--outline">Button</button>
-    <br/><br/>
-    <button class="uq-button uq-button--secondary uq-button--expand uq-button--text">Button</button>
-    <br/><br/>
-    <button class="uq-button uq-button--secondary uq-button--expand uq-button--outline uq-button--light">Button</button>
-    <br/><br/>
-    <button class="uq-button uq-button--secondary uq-button--expand uq-button--text uq-button--light">Button</button>
-    <br/><br/>
-    <button class="uq-button uq-button--purple uq-button--expand">Button</button>
-    <br/><br/>
-    <button class="uq-button uq-button--purple uq-button--expand uq-button--outline">Button</button>
-    <br/><br/>
-    <button class="uq-button uq-button--purple uq-button--expand uq-button--text">Button</button>
   </div>
 </div>
 <br/><br/>
