--- a/packages/storybook-html/src/components/header/header_no-local-search.html
+++ b/packages/storybook-html/src/components/header/header_no-local-search.html
@@ -1,58 +1,58 @@
 <header class="uq-header">
     <div class="uq-header__container">
-        <div class="nav-global">
-            <div class="logo">
-                <a class="logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
-                <a class="logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg"></a>
+        <div class="uq-header__nav-wrapper">
+            <div class="uq-header__logo">
+                <a class="uq-header__logo--large" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-lockup-landscape--reversed.svg"></a>
+                <a class="uq-header__logo--small" href="https://www.uq.edu.au/"><img alt="The University of Queensland" src="https://static.uq.net.au/v11/logos/corporate/uq-logo--reversed.svg"></a>
             </div>
-            <nav class="menu-global">
+            <nav class="uq-header__nav">
                 <ul>
-                    <li><a href="https://contacts.uq.edu.au/">Contacts</a></li>
-                    <li><a href="https://future-students.uq.edu.au/">Study</a></li>
-                    <li><a href="https://maps.uq.edu.au/">Maps</a></li>
-                    <li><a href="https://www.uq.edu.au/news/">News</a></li>
-                    <li><a href="https://www.uq.edu.au/events/">Events</a></li>
-                    <li><a href="https://jobs.uq.edu.au/">Jobs</a></li>
-                    <li><a href="https://www.library.uq.edu.au/">Library</a></li>
-                    <li><a href="https://giving.uq.edu.au/">Give now</a></li>
-                    <li><a href="https://my.uq.edu.au/">my.UQ</a></li>
-                    <li class="menu-global__search-toggle">
-                        <button class="search-toggle__button">Toggle Search</button>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://contacts.uq.edu.au/">Contacts</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://future-students.uq.edu.au/">Study</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://maps.uq.edu.au/">Maps</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://www.uq.edu.au/news/">News</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://www.uq.edu.au/events/">Events</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://jobs.uq.edu.au/">Jobs</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://www.library.uq.edu.au/">Library</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://giving.uq.edu.au/">Give now</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://my.uq.edu.au/">my.UQ</a></li>
+                    <li class="uq-header__nav-item uq-header__search-toggle">
+                        <button class="uq-header__search-toggle-button">Toggle Search</button>
                     </li>
                 </ul>
             </nav>
         </div>
-        <div class="nav-search">
-            <form class="nav-search__form" action="https://www.uq.edu.au/search/" method="get" accept-charset="UTF-8">
-                <fieldset class="nav-search__wrapper">
+        <div class="uq-header__search-wrapper">
+            <form class="uq-header__search-form" action="https://www.uq.edu.au/search/" method="get" accept-charset="UTF-8">
+                <fieldset class="uq-header__search">
                     <legend class="hidden">
-                        <span class="nav-search__title">What are you looking for?</span>
+                        <span class="uq-header__search-title">What are you looking for?</span>
                     </legend>
-                    <span class="nav-search__title" tabindex="0">What are you looking for?</span>
-                    <div class="nav-search__scope" tabindex="0">Search all UQ websites</div>
+                    <span class="uq-header__search-title" tabindex="0">What are you looking for?</span>
+                    <div class="uq-header__search-scope" tabindex="0">Search all UQ websites</div>
                 </fieldset>
-                <div class="nav-search__query">
-                    <span class="search-query__wrapper">
+                <div class="uq-header__query-wrapper">
+                    <span class="uq-header__query">
                         <label for="edit-q" class="visually-hidden">Search term</label>
-                        <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="search-query__input">
-                        <span class="search-query__button">
-                            <input type="submit" name="op" value="Search" class="search-query__submit">
+                        <input type="text" id="edit-q" name="q" value="" size="60" maxlength="128" class="uq-header__query-input">
+                        <span class="uq-header__query-button">
+                            <input type="submit" name="op" value="Search" class="uq-header__query-submit">
                         </span>
                     </span>
                 </div>
             </form>
 
-            <nav class="menu-global">
+            <nav class="uq-header__nav" aria-label="Global navigation">
                 <ul>
-                    <li><a href="https://contacts.uq.edu.au/">Contacts</a></li>
-                    <li><a href="https://www.uq.edu.au/news/">News</a></li>
-                    <li><a href="https://www.library.uq.edu.au/">Library</a></li>
-                    <li><a href="https://future-students.uq.edu.au/">Study</a></li>
-                    <li><a href="https://www.uq.edu.au/events/">Events</a></li>
-                    <li><a href="https://giving.uq.edu.au/">Give now</a></li>
-                    <li><a href="https://maps.uq.edu.au/">Maps</a></li>
-                    <li><a href="https://jobs.uq.edu.au/">Jobs</a></li>
-                    <li><a href="https://my.uq.edu.au/">my.UQ</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://contacts.uq.edu.au/">Contacts</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://www.uq.edu.au/news/">News</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://www.library.uq.edu.au/">Library</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://future-students.uq.edu.au/">Study</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://www.uq.edu.au/events/">Events</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://giving.uq.edu.au/">Give now</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://maps.uq.edu.au/">Maps</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://jobs.uq.edu.au/">Jobs</a></li>
+                    <li class="uq-header__nav-item"><a class="uq-header__nav-link" href="https://my.uq.edu.au/">my.UQ</a></li>
                 </ul>
             </nav>
         </div>
